# Fc-Admiral

./: .cursorruls  .env.example  .gitignore  Dockerfile  a  docker-compose.yml  entrypoint.sh  generate_ssl.sh  main.py  pyproject.toml  requirments.txt
app/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_coach_education_alter_coach_qualification_and_more.py  0003_remove_coach_work_experience_coach_work_start_year.py  0004_joinrequest.py  0005_delete_joinrequest_alter_coach_options_coach_order.py  0006_joinrequest_delete_parent.py  0007_alter_joinrequest_branch.py
app/static/fonts/: Akt-Black.ttfZone.Identifier
app/static/js/: main.js
app/static/styles/: style.css
app/static/styles/scss/: _core.scss  _mixins.scss  _reset.scss  _variables.scss  main.scss
app/static/styles/scss/blocks/: anceta.scss  coach-cards.scss  footer.scss  info-one.scss  intro.scss  philosophy.scss  sets.scss  we-have.scss
app/templates/: base.html
app/templates/app/: coach_cards.html  index.html  player_cards.html
app/templates/app/css/: style.css  style.css.map
app/templates/app/scss/: main.scss
app/templates/app/scss/blocks/: footer.scss  intro.scss  philosophy.scss  plus.scss  sets.scss
app/templates/includes/: footer.html  header.html
config/: settings.py  urls.py
nginx/: default.conf
