[project]
name = "fk-admiral"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.7",
    "python-dotenv>=1.1.1",
    "pillow>=10.0.0",
    "django-unfold>=0.72.0",
    "gunicorn>=21.2.0",
    "psycopg[binary]>=3.0.0",
]
